prometheus/10-java-exporter/01-javaapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      volumes:
      - name: javaagent
        emptyDir: {}

      containers:
      - name: javaapp
        image: oldxu3957/javaapp:v1.0
        volumeMounts:
        - name: javaagent
          mountPath: /agent
        ports:
        - name: java
          containerPort: 8080
        - name: jmx
          containerPort: 12345
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 100m
            memory: 300Mi
