prometheus/10-java-exporter/03-javaapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javaapp-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: "javaapp.oldxu.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: javaapp-svc
            port:
              number: 8080
